samples/_failures_safe/1761697634_15328a_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_f2a9dca3.c: In function ‘main’:
./samples/SAFE/__tmp_f2a9dca3.c:149:13: error: expected expression at end of input
  149 |             case
      |             ^~~~
./samples/SAFE/__tmp_f2a9dca3.c:149:13: error: expected declaration or statement at end of input
./samples/SAFE/__tmp_f2a9dca3.c:149:13: error: expected declaration or statement at end of input
./samples/SAFE/__tmp_f2a9dca3.c:149:13: error: expected declaration or statement at end of input
